# auto-labeling-app

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: build-and-deploy-prod.yml  build-deploy-backend.yml  build-deploy-models-gateway.yml  build-push-backend.yml  build-sam.yml  build-yolo.yml
backend/app/: .dockerignore  .env.example  main.py  pyproject.toml
backend/app/api/: deps.py
backend/app/api/graphql/: context.py  mutation.py  queries.py  schema.py
backend/app/api/image_upload/: image_upload.py
backend/app/core/: auth.py  config.py
backend/app/crud/: dataset.py  image.py  label.py  user.py
backend/app/errors/: label.py
backend/app/models/: dataset.py  image.py  label.py  label_detection.py  label_segmentation.py  object_class.py  user.py
backend/app/tests/: test_label.py  test_main.py
backend/models/yolo/: main.py  pyproject.toml
deploy/: update_env_secrets.sh
deploy/inferences/: docker-compose.yml
docs/: auto_label.md  cicd.md  db.dbml  design.md  references.md  secrets.md
frontend/app/: nuxt.config.ts  package-lock.json  package.json
frontend/app/app/: app.config.ts  app.vue
frontend/app/app/components/: AppNavbar.vue
frontend/app/app/components/dataset/: CreateDatasetModal.vue  DatasetBadge.vue  dataset.ts  (+5 more)
frontend/app/app/composables/: useAutoLabelingQuery.ts  useCalssOptions.ts  useClassManagement.ts  useDataset.ts  useGDINO.ts  useImageUpload.ts  useLabel.ts  useLabelMap.ts  useLabelQueries.ts  useLabelSeg.ts  useSAM.ts  useSAMBox.ts  useSingleDataset.ts  useUser.ts
frontend/app/app/layouts/: default.vue  fullscreen.vue
frontend/app/app/pages/: index.vue
frontend/app/app/plugins/: apollo-auth.ts  apollo.client.ts
frontend/app/app/store/: datasets.ts  user.ts
frontend/app/app/types/: dataset.ts  image.ts
frontend/app/app/utils/: tool.ts
infra/gcs/: README.md
models/gateway/: .dockerignore  Dockerfile  crud.py  events.py  main.py  mq.py  pyproject.toml
models/gateway/model/: auto_label_job.py
models/sam/: Dockerfile  events.py  main.py  predictor.py  pyproject.toml
models/yolo/: Dockerfile  crud.py  data_types.py  events.py  handler.py  main.py  predictor.py  pyproject.toml
path=.github/workflows/: google-cloudrun-docker.yml
scripts/: init_test.sh
(+10 files in other folders)
